--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.doraemon</groupId>
   <artifactId>doraemon-all</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>doraemon-all</name>
