--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-doraemon-all/.DS_Store
-doraemon-all/.classpath
-doraemon-all/.project
-doraemon-all/.settings/
-doraemon-all/target/
+.DS_Store
+.classpath
+.project
+.settings/
+target/
 
 # Package Files #
 *.jar
