--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -4,13 +4,16 @@
 
   <groupId>io.doraemon</groupId>
   <artifactId>doraemon-all</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>doraemon-all</name>
   <url>http://maven.apache.org</url>
 
   <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>  
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -24,18 +27,12 @@
     <dependency>
     		<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
-    		<version>2.7</version>
+    		<version>2.8.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
-	    <version>1.7.24</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.7.24</version>
 	</dependency>
 	<dependency>
