--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.project
+.settings/
+target/
 doraemon-all/.DS_Store
 doraemon-all/.classpath
 doraemon-all/.project
