--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -29,6 +29,12 @@
     		<artifactId>gson</artifactId>
     		<version>2.8.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+	<dependency>
+	    <groupId>org.yaml</groupId>
+	    <artifactId>snakeyaml</artifactId>
+	    <version>1.27</version>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 	<dependency>
 	    <groupId>org.slf4j</groupId>
