--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.doraemon</groupId>
   <artifactId>doraemon-all</artifactId>
-  <version>1.2</version>
+  <version>1.2.1</version>
   <packaging>jar</packaging>
 
   <name>doraemon-all</name>
@@ -47,4 +47,18 @@
 	  <version>1.72</version>
 	</dependency>
   </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Nexus Release Repository</name>
+            <url>http://39.105.231.159:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://39.105.231.159:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
+
