--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -25,6 +25,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	    <groupId>net.java.dev.jna</groupId>
+	    <artifactId>jna-platform</artifactId>
+	    <version>5.6.0</version>
+	</dependency>
+    <dependency>
     		<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
     		<version>2.8.2</version>
