--- a/doraemon-all/pom.xml
+++ b/doraemon-all/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.doraemon</groupId>
   <artifactId>doraemon-all</artifactId>
-  <version>1.2</version>
+  <version>1.2.1</version>
   <packaging>jar</packaging>
 
   <name>doraemon-all</name>
@@ -25,6 +25,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	    <groupId>net.java.dev.jna</groupId>
+	    <artifactId>jna-platform</artifactId>
+	    <version>5.6.0</version>
+	</dependency>
+    <dependency>
     		<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
     		<version>2.8.2</version>
@@ -39,7 +44,7 @@
 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
-	    <version>1.7.24</version>
+	    <version>1.7.26</version>
 	</dependency>
 	<dependency>
 	  <groupId>com.beust</groupId>
